== 3.2 ==

* Implemented ability to override form and search result templates.

== 3.1.0.1 ==

* Fixed issue with loading wrong widgets script.

== 3.1 ==

* Implemented ability to select on which blog to show global site search.
* Fixed content stripping issue for multi bite sites.

== 3.0.3 ==

* Removed shortcodes from search results.
* Changed submit method from POST to GET for search form.